--- a/package.json
+++ b/package.json
@@ -72,12 +72,12 @@
 			{
 				"key": "tab",
 				"command": "tab-nav.next",
-				"when": "tabNav.mode == whitelist && editorLangId in tabNav.languages && tabNav.enabled && editorTextFocus && !editorTabMovesFocus && !suggestWidgetVisible && !inlineSuggestionVisible && !suggestWidgetMultipleSuggestions && !hasOtherSuggestions && !hasSnippetCompletions && !hasNextTabstop || tabNav.mode == blacklist && editorLangId not in tabNav.languages && tabNav.enabled && editorTextFocus && !editorTabMovesFocus && !suggestWidgetVisible && !inlineSuggestionVisible && !suggestWidgetMultipleSuggestions && !hasOtherSuggestions && !hasSnippetCompletions && !hasNextTabstop"
+				"when": "editorTextFocus && tabNav.enabled && !editorTabMovesFocus && !hasNextTabstop && !hasSnippetCompletions && !inlineSuggestionVisible && !suggestWidgetMultipleSuggestions && !suggestWidgetVisible && ( tabNav.mode == 'whitelist' && editorLangId in 'tabNav.languages' || tabNav.mode == 'blacklist' && editorLangId not in 'tabNav.languages' )"
 			},
 			{
 				"key": "shift+tab",
 				"command": "tab-nav.prev",
-				"when": "tabNav.mode == whitelist && editorLangId in tabNav.languages && tabNav.enabled && editorTextFocus && !editorTabMovesFocus && !suggestWidgetVisible && !inlineSuggestionVisible && !suggestWidgetMultipleSuggestions && !hasOtherSuggestions && !hasSnippetCompletions && !hasPrevTabstop || tabNav.mode == blacklist && editorLangId not in tabNav.languages && tabNav.enabled && editorTextFocus && !editorTabMovesFocus && !suggestWidgetVisible && !inlineSuggestionVisible && !suggestWidgetMultipleSuggestions && !hasOtherSuggestions && !hasSnippetCompletions && !hasPrevTabstop"
+				"when": "editorTextFocus && tabNav.enabled && !editorTabMovesFocus && !hasNextTabstop && !hasSnippetCompletions && !inlineSuggestionVisible && !suggestWidgetMultipleSuggestions && !suggestWidgetVisible && ( tabNav.mode == 'whitelist' && editorLangId in 'tabNav.languages' || tabNav.mode == 'blacklist' && editorLangId not in 'tabNav.languages' )"
 			}
 		]
 	},
